export interface Employee {
  getId(): string;
  getFirstName(): string;
  getLastName(): string;
  getEmail(): String;

  toString(): string;
}
